[package]
name = "sdr_db"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.2", features = ["postgres", "chrono"] }
sled = "0.34.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
geo-types = "0.7"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
clap = { version = "4.5.48", features = ["derive", "env"] }

[dev-dependencies]
proptest = "1.4"
