[package]
name = "sdr_db"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.2", features = ["postgres", "chrono"] }
sled = "0.34.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
geo-types = "0.7"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
clap = { version = "4.5.48", features = ["derive", "env"] }
geo = "0.31.0"
soapysdr = "0.4.2"
tokio = { version = "1.48.0", features = ["sync"] }
ratatui = "0.29.0"
color-eyre = "0.6.5"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
tui-input = "0.14.0"
tui-prompts = "0.5.0"
tui-textarea = "0.7.0"
tui = "0.19.0"

[dev-dependencies]
proptest = "1.4"
